# src/main/java/com/alexpages/ebankingapi/web/TransactionController.java
@@ -1,9 +1,9 @@
 package com.alexpages.ebankingapi.web;
 
 
-import com.alexpages.ebankingapi.domain.Transaction;
+import com.alexpages.ebankingapi.entity.TransactionEntity;
+import com.alexpages.ebankingapi.others.TransactionControllerRequest;
 import com.alexpages.ebankingapi.services.TransactionService;
-import com.alexpages.ebankingapi.utils.TransactionControllerRequest;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -47,7 +47,7 @@ public class TransactionController {
             }
     )
     @PostMapping("/publish")
-    public ResponseEntity<?> publishTransactionToTopic(@RequestBody Transaction transaction){
+    public ResponseEntity<?> publishTransactionToTopic(@RequestBody TransactionEntity transaction){
         try{
             return ResponseEntity.ok(transactionService.publishTransactionToTopic(transaction));
         } catch (Exception jsonProcessingException){
